--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
     container_name: server_api
     image: api
     healthcheck:
-      test:  wget --quiet --tries=3 --spider http://localhost:4000/api/peliculas || exit 1
+      test:  wget --quiet --tries=3 --spider http://localhost:4000/api/movies/healtcheck || exit 1
       interval: 30s
       timeout: 10s
       retries: 3
