--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,18 @@
   "author": "Alfred Rodriguez",
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "compression": "^1.7.4",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "http-status": "^1.5.1",
     "mongoose": "^6.3.0",
+    "mongoose-paginate-v2": "^1.6.3",
+    "multer": "^1.4.4",
     "node-yaml-config": "^1.0.0",
     "winston": "^3.3.3"
   },
@@ -25,6 +31,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "express-fileupload": "^1.3.1",
     "express-swagger-generator": "^1.1.17",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
