--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -26,7 +26,8 @@
       "baseUrl": ".",
       "paths": {
           "@Controller/*":["./src/Api/Controller/*"],
-          "@Routes/*":["src/Api/Routes/*"]
+          "@Routes/*":["src/Api/Routes/*"],
+          "@Repositories/*":["src/Dal/Repositories/*"]
       },
       "typeRoots": ["src/global.d.ts", "./node_modules/@types"]
     },
